compiler/testData/diagnostics/tests/java8Overrides/hidingMethodOfAny.kt
interface IA {
    fun <!VIRTUAL_MEMBER_HIDDEN!>toString<!>(): String = "IB"

    override fun equals(other: Any?): Boolean
}